--- a/src/resources/org/telaInicial/telaInicial-view.fxml
+++ b/src/resources/org/telaInicial/telaInicial-view.fxml
@@ -1,19 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.Blend?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="472.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="telaInicial" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../../styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javaFx.org.telaInicial.telaInicialController">
     <children>
-        <Button layoutX="263.0" layoutY="352.0" mnemonicParsing="false" text="Cliente      " />
-        <Button layoutX="434.0" layoutY="352.0" mnemonicParsing="false" text="Funcionario" />
-        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="336.0" layoutY="92.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../../../../../../Ativo%201.png" />
-            </image>
-        </ImageView>
+      <ImageView disable="true" fitHeight="720.0" fitWidth="1287.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../INICIAL.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="ButtonCliente" layoutX="578.0" layoutY="520.0" mnemonicParsing="false" onAction="#onHelloClienteButtonClick" prefHeight="45.0" prefWidth="124.0" text="Cliente">
+         <font>
+            <Font name="Arial" size="12.0" />
+         </font>
+         <effect>
+            <Blend />
+         </effect></Button>
+      <Button fx:id="ButtonFuncionario" layoutX="578.0" layoutY="596.0" mnemonicParsing="false" onAction="#onHelloFuncionarioButtonClick" prefHeight="45.0" prefWidth="124.0" stylesheets="@../../styles.css" text="Funcionário">
+         <effect>
+            <Blend />
+         </effect>
+      </Button>
+      <Label fx:id="welcomeText" layoutX="347.0" layoutY="641.0" prefHeight="31.0" prefWidth="478.0">
+         <font>
+            <Font size="23.0" />
+         </font></Label>
     </children>
-</Pane>
+</AnchorPane>
