--- a/src/resources/org/loginCliente/loginCliente-view.fxml
+++ b/src/resources/org/loginCliente/loginCliente-view.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javaFx.org.loginCliente.loginClienteController">
    <children>
-      <ImageView fitHeight="742.0" fitWidth="1308.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="742.0" fitWidth="1308.0" layoutY="-12.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../LoginCliente.png" />
          </image>
