--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -13,6 +13,19 @@
     -fx-transition: background-color 0.3s ease;
 }
 
+.tab-pane.tab{
+    -fx-background-color: #fcf4e0;
+    -fx-text-fill: #7c3614;
+    -fx-font-size: 14px;
+    -fx-background-radius: 30;
+    -fx-border-radius: 30;
+    -fx-border-color: transparent;
+    -fx-effect: dropshadow( one-pass-box , rgba(0,0,0,0.2) , 5, 0.0 , 0 , 1);
+    -fx-cursor: hand;
+    -fx-transition: background-color 0.3s ease;
+
+}
+
 
 .button:hover {
     -fx-background-color: #40ad21;
