--- a/src/resources/org/produto/produto-view.fxml
+++ b/src/resources/org/produto/produto-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
@@ -25,8 +26,8 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="662.0" prefWidth="1005.0">
                      <children>
-                        <Rectangle fx:id="retangulo" arcHeight="30" arcWidth="30" fill="#fcf4e0" height="435.0" layoutX="336.0" layoutY="101.0" strokeType="INSIDE" width="377.0" />
-                        <VBox alignment="CENTER_LEFT" layoutX="358.0" layoutY="250.0" prefHeight="184.0" prefWidth="197.0" spacing="28">
+                        <Rectangle fx:id="retangulo" arcHeight="30" arcWidth="30" fill="#fcf4e0" height="435.0" layoutX="317.0" layoutY="89.0" strokeType="INSIDE" width="377.0" />
+                        <VBox alignment="CENTER_LEFT" layoutX="339.0" layoutY="238.0" prefHeight="184.0" prefWidth="197.0" spacing="28">
                            <children>
                               <Label text="Nome">
                                  <font>
@@ -45,19 +46,19 @@
                               </Label>
                            </children>
                         </VBox>
-                        <ImageView fitHeight="142.0" fitWidth="333.0" layoutX="358.0" layoutY="132.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="foto" fitHeight="142.0" fitWidth="333.0" layoutX="339.0" layoutY="120.0" nodeOrientation="INHERIT" onMouseClicked="#onFotoClick" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../icons/fotoAdd.png" />
                            </image>
                         </ImageView>
-                        <VBox alignment="CENTER_RIGHT" layoutX="471.0" layoutY="262.0" prefHeight="160.0" prefWidth="220.0" spacing="20">
+                        <VBox alignment="CENTER_RIGHT" layoutX="452.0" layoutY="250.0" prefHeight="160.0" prefWidth="220.0" spacing="20">
                            <children>
-                              <TextField prefHeight="25.0" prefWidth="129.0" />
-                              <TextField />
-                              <TextField />
+                              <TextField fx:id="nome" prefHeight="25.0" prefWidth="129.0" />
+                              <TextField fx:id="qtd" />
+                              <TextField fx:id="preco" />
                            </children>
                         </VBox>
-                        <Button layoutX="474.0" layoutY="447.0" mnemonicParsing="false" prefHeight="57.0" prefWidth="101.0" text="Salvar">
+                        <Button fx:id="salvar" layoutX="455.0" layoutY="435.0" mnemonicParsing="false" onAction="#salvar" prefHeight="57.0" prefWidth="101.0" text="Salvar">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
@@ -68,7 +69,22 @@
           </Tab>
           <Tab text="Pesquisar">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Rectangle fx:id="retangulo1" arcHeight="30" arcWidth="30" fill="#fcf4e0" height="435.0" layoutX="317.0" layoutY="89.0" strokeType="INSIDE" width="377.0" />
+                        <Button fx:id="pesquisar" layoutX="567.0" layoutY="146.0" mnemonicParsing="false" onAction="#pesquisarId" prefHeight="43.0" prefWidth="103.0" text="Pesquisar">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Button>
+                        <TextField fx:id="busca" layoutX="342.0" layoutY="150.0" prefHeight="36.0" prefWidth="208.0" />
+                        <ListView fx:id="listaDeProdutos" layoutX="342.0" layoutY="207.0" prefHeight="280.0" prefWidth="328.0" />
+                        <Label layoutX="342.0" layoutY="104.0" prefHeight="35.0" prefWidth="276.0" text="Pesquisar produto por Nome" textFill="#946a09">
+                           <font>
+                              <Font name="System Bold" size="17.0" />
+                           </font>
+                        </Label>
+                     </children></AnchorPane>
             </content>
           </Tab>
             <Tab text="Atualizar">
