--- a/src/resources/org/produto/produto-view.fxml
+++ b/src/resources/org/produto/produto-view.fxml
@@ -120,7 +120,7 @@
                                     <Font name="System Bold" size="14.0" />
                                  </font>
                               </Label>
-                              <Label text="Quantidade" >
+                              <Label text="Quantidade">
                                  <font>
                                     <Font name="System Bold" size="14.0" />
                                  </font>
@@ -134,7 +134,7 @@
                         </VBox>
                         <VBox layoutX="449.0" layoutY="346.0" prefHeight="139.0" prefWidth="215.0" spacing="10">
                            <children>
-                              <TextField  fx:id="nomeAtl" prefHeight="25.0" prefWidth="216.0" />
+                              <TextField fx:id="nomeAtl" prefHeight="25.0" prefWidth="216.0" />
                               <TextField fx:id="qtdAtl" layoutX="10.0" layoutY="10.0" prefHeight="25.0" prefWidth="216.0" />
                               <TextField fx:id="precoAtl" layoutX="10.0" layoutY="35.0" prefHeight="25.0" prefWidth="216.0" />
                            </children>
@@ -144,7 +144,31 @@
             </Tab>
             <Tab text="Remover">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Rectangle fx:id="retangulo12" arcHeight="30" arcWidth="30" fill="#fcf4e0" height="279.0" layoutX="317.0" layoutY="89.0" strokeType="INSIDE" width="377.0" />
+                        <Button fx:id="pesquisarRm" layoutX="567.0" layoutY="146.0" mnemonicParsing="false" onAction="#removerProduto" prefHeight="43.0" prefWidth="103.0" text="Pesquisar">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Button>
+                        <TextField fx:id="buscaRm" layoutX="342.0" layoutY="150.0" prefHeight="36.0" prefWidth="208.0" />
+                        <Label layoutX="342.0" layoutY="104.0" prefHeight="35.0" prefWidth="276.0" text="Remover produto por id" textFill="#946a09">
+                           <font>
+                              <Font name="System Bold" size="17.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="remover" layoutX="455.0" layoutY="285.0" mnemonicParsing="false" onAction="#confirmarRemover" prefHeight="57.0" prefWidth="101.0" text="Remover!">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Button>
+                        <Label  fx:id="resultadoRm" layoutX="368.0" layoutY="222.0" prefHeight="35.0" prefWidth="276.0" textFill="#946a09">
+                           <font>
+                              <Font name="System Bold" size="17.0" />
+                           </font>
+                        </Label>
+                     </children></AnchorPane>
                </content>
             </Tab>
         </tabs>
