--- a/src/resources/org/cadastroFuncionario/cadastroFuncionario-view.fxml
+++ b/src/resources/org/cadastroFuncionario/cadastroFuncionario-view.fxml
@@ -2,44 +2,188 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="471.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javaFx.org.cadastroFuncionario.cadastroFuncionarioController">
+<AnchorPane prefHeight="626.0" prefWidth="1004.0" stylesheets="@../../styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javaFx.org.cadastroFuncionario.cadastroFuncionarioController">
    <children>
-      <Label layoutX="62.0" layoutY="106.0" prefHeight="26.0" prefWidth="58.0" text="NOME">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <Label layoutX="62.0" layoutY="65.0" text="CPF">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <Label layoutX="63.0" layoutY="143.0" text="CARGO">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <Label layoutX="62.0" layoutY="184.0" prefHeight="26.0" prefWidth="58.0" text="EMAIL">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <Label layoutX="63.0" layoutY="227.0" prefHeight="26.0" prefWidth="82.0" text="TELEFONE">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <TextField layoutX="151.0" layoutY="66.0" />
-      <TextField layoutX="151.0" layoutY="106.0" />
-      <TextField layoutX="151.0" layoutY="143.0" />
-      <TextField layoutX="151.0" layoutY="185.0" />
-      <TextField layoutX="151.0" layoutY="228.0" />
-      <Button layoutX="300.0" layoutY="296.0" mnemonicParsing="false" text="SALVAR" />
-      <Button layoutX="211.0" layoutY="296.0" mnemonicParsing="false" text="LIMPAR" />
+      <ImageView fitHeight="642.0" fitWidth="1109.0" layoutX="-99.0" pickOnBounds="true">
+         <image>
+            <Image url="@../../telaSecundariaFuncionario.png" />
+         </image>
+      </ImageView>
+      <TabPane prefHeight="642.0" prefWidth="1011.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="Cadastrar">
+               <content>
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <Rectangle arcHeight="30" arcWidth="30" fill="#fcf4e0" height="435.0" layoutX="317.0" layoutY="89.0" stroke="BLACK" strokeType="INSIDE" width="377.0" />
+                        <ImageView fitHeight="62.0" fitWidth="62.0" layoutX="478.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../icons/addFuncionario_2.png" />
+                           </image>
+                        </ImageView>
+                        <VBox layoutX="342.0" layoutY="217.0" prefHeight="184.0" prefWidth="192.0" spacing="20">
+                           <children>
+                              <Label text="CPF">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label text="Nome">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label text="Cargo">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label text="Email">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label text="Telefone">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </VBox>
+                        <VBox layoutX="429.0" layoutY="217.0" prefHeight="185.0" prefWidth="240.0" spacing="15">
+                           <children>
+                              <TextField />
+                              <TextField />
+                              <TextField />
+                              <TextField />
+                              <TextField />
+                           </children>
+                        </VBox>
+                        <Button layoutX="455.0" layoutY="437.0" mnemonicParsing="false" prefHeight="57.0" prefWidth="101.0" text="Salvar!" />
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+            <Tab text="Pesquisar">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Rectangle fx:id="retangulo1" arcHeight="30" arcWidth="30" fill="#fcf4e0" height="435.0" layoutX="317.0" layoutY="89.0" strokeType="INSIDE" width="377.0" />
+                        <Button fx:id="pesquisar" layoutX="567.0" layoutY="146.0" mnemonicParsing="false" onAction="#pesquisarPorNome" prefHeight="43.0" prefWidth="103.0" text="Pesquisar">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Button>
+                        <TextField fx:id="busca" layoutX="342.0" layoutY="150.0" prefHeight="36.0" prefWidth="208.0" />
+                        <ListView fx:id="listaDeProdutos" layoutX="342.0" layoutY="207.0" prefHeight="280.0" prefWidth="328.0" />
+                        <Label layoutX="342.0" layoutY="104.0" prefHeight="35.0" prefWidth="276.0" text="Pesquisar funcionario por Nome" textFill="#946a09">
+                           <font>
+                              <Font name="System Bold" size="17.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+            <Tab text="Atualizar">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Rectangle fx:id="retangulo11" arcHeight="30" arcWidth="30" fill="#fcf4e0" height="435.0" layoutX="317.0" layoutY="89.0" strokeType="INSIDE" width="377.0" />
+                        <Button fx:id="pesquisarAtl" layoutX="567.0" layoutY="146.0" mnemonicParsing="false" onAction="#atualizarFuncionario" prefHeight="43.0" prefWidth="103.0" text="Pesquisar">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Button>
+                        <TextField fx:id="buscaAtl" layoutX="342.0" layoutY="150.0" prefHeight="36.0" prefWidth="208.0" />
+                        <Label layoutX="342.0" layoutY="104.0" prefHeight="35.0" prefWidth="276.0" text="Pesquisar funcionario por cpf" textFill="#946a09">
+                           <font>
+                              <Font name="System Bold" size="17.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="salvarAtl" layoutX="455.0" layoutY="437.0" mnemonicParsing="false" onAction="#salvarAtl" prefHeight="57.0" prefWidth="101.0" text="Salvar">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Button>
+                        <VBox layoutX="346.0" layoutY="227.0" prefHeight="184.0" prefWidth="198.0" spacing="20">
+                           <children>
+                              <Label text="Nome">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label text="Cargo">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label text="Email">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label text="Telefone">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </VBox>
+                        <VBox layoutX="439.0" layoutY="227.0" prefHeight="185.0" prefWidth="232.0" spacing="15">
+                           <children>
+                              <TextField />
+                              <TextField />
+                              <TextField />
+                              <TextField />
+                           </children>
+                        </VBox>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+            <Tab text="Remover">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Rectangle fx:id="retangulo12" arcHeight="30" arcWidth="30" fill="#fcf4e0" height="279.0" layoutX="317.0" layoutY="89.0" strokeType="INSIDE" width="377.0" />
+                        <Button fx:id="pesquisarRm" layoutX="567.0" layoutY="146.0" mnemonicParsing="false" onAction="#removerFuncionario" prefHeight="43.0" prefWidth="103.0" text="Pesquisar">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Button>
+                        <TextField fx:id="buscaRm" layoutX="342.0" layoutY="150.0" prefHeight="36.0" prefWidth="208.0" />
+                        <Label layoutX="342.0" layoutY="104.0" prefHeight="35.0" prefWidth="276.0" text="Remover funcionario por cpf" textFill="#946a09">
+                           <font>
+                              <Font name="System Bold" size="17.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="remover" layoutX="455.0" layoutY="285.0" mnemonicParsing="false" onAction="#confirmarRemover" prefHeight="57.0" prefWidth="101.0" text="Remover!">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Button>
+                        <Label fx:id="resultadoRm" layoutX="368.0" layoutY="222.0" prefHeight="35.0" prefWidth="276.0" textFill="#946a09">
+                           <font>
+                              <Font name="System Bold" size="17.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+        </tabs>
+      </TabPane>
    </children>
 </AnchorPane>
