--- a/src/resources/org/telaInicial/telaInicial-view.fxml
+++ b/src/resources/org/telaInicial/telaInicial-view.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane fx:id="telaInicial" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../../styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javaFx.org.telaInicial.telaInicialController">
     <children>
-      <ImageView disable="true" fitHeight="720.0" fitWidth="1287.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView disable="true" fitHeight="720.0" fitWidth="1286.0" layoutX="-1.0" pickOnBounds="true">
          <image>
             <Image url="@../../INICIAL.png" />
          </image>
