--- a/src/resources/org/pedidoCliente/pedidoCliente-view.fxml
+++ b/src/resources/org/pedidoCliente/pedidoCliente-view.fxml
@@ -3,36 +3,72 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="497.0" prefWidth="618.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javaFx.org.pedidoCliente.pedidoClienteController">
+<AnchorPane prefHeight="626.0" prefWidth="1004.0" stylesheets="@../../styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javaFx.org.pedidoCliente.pedidoClienteController">
    <children>
-      <TableView fx:id="tabela_principal" editable="true" layoutX="14.0" layoutY="59.0" prefHeight="324.0" prefWidth="388.0">
-        
-          <columns>
-            <TableColumn fx:id="selectCol" prefWidth="40.0" sortable="false" />
-          <TableColumn fx:id="foto" prefWidth="96.0" sortable="false" />
-              <TableColumn fx:id="nome" prefWidth="122.0" sortable="false" text="NOME" />
-            <TableColumn fx:id="preco" prefWidth="129.0" sortable="false" text="PREÇO" />
-        </columns>
+      <ImageView fitHeight="626.0" fitWidth="1004.0" pickOnBounds="true" smooth="false">
+         <image>
+            <Image url="@../../homeCliente.png" />
+         </image>
+      </ImageView>
+      <Rectangle arcHeight="30" arcWidth="30" fill="#fcf4e0" height="478.0" layoutX="30.0" layoutY="30.0" stroke="BLACK" strokeType="INSIDE" width="663.0" />
+      <Rectangle arcHeight="30" arcWidth="30" fill="#fcf4e0" height="478.0" layoutX="699.0" layoutY="30.0" stroke="BLACK" strokeType="INSIDE" width="289.0" />
+      <TableView fx:id="listaDeProdutos" editable="true" layoutX="51.0" layoutY="96.0" prefHeight="323.0" prefWidth="621.0">
+
       </TableView>
-      <ListView fx:id="carrinho" layoutX="425.0" layoutY="59.0" prefHeight="324.0" prefWidth="182.0" />
-      <Label layoutX="14.0" layoutY="14.0" prefHeight="37.0" prefWidth="126.0" text="OPÇÕES">
+      <ListView fx:id="carrinho" layoutX="714.0" layoutY="96.0" prefHeight="323.0" prefWidth="261.0" />
+      <Label layoutX="58.0" layoutY="46.0" prefHeight="37.0" prefWidth="179.0" text="PRODUTOS">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <Button onAction="#onFinalizarPedidoClick" layoutX="288.0" layoutY="532.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="494.0" text="Finalizar Pedido!">
          <font>
             <Font size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="458.0" layoutY="17.0" text="CARRINHO">
+         </font></Button>
+      <Label fx:id="produto" layoutX="55.0" layoutY="441.0" prefHeight="42.0" prefWidth="267.0">
          <font>
-            <Font size="21.0" />
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="714.0" layoutY="47.0" prefHeight="37.0" prefWidth="138.0" text="CARRINHO" textFill="#404040">
+         <font>
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button fx:id="confirmar" layoutX="518.0" layoutY="416.0" mnemonicParsing="false" onAction="#confirmarPedido" prefHeight="25.0" prefWidth="88.0" text="CONFIRMAR" />
-      <Button fx:id="cancelar" layoutX="421.0" layoutY="416.0" mnemonicParsing="false" text="CANCELAR" />
-      <TextField fx:id="teste" layoutX="33.0" layoutY="404.0" />
+      <Button layoutX="867.0" layoutY="441.0" mnemonicParsing="false" onAction="#onRemoverDoCarrinhoClick" prefHeight="42.0" prefWidth="108.0" text="Remover" />
+      <Label fx:id="produto2" layoutX="714.0" layoutY="441.0" prefHeight="42.0" prefWidth="138.0">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Spinner fx:id="spinner" layoutX="460.0" layoutY="447.0" prefHeight="30.0" prefWidth="75.0" />
+      <Label fx:id="produto1" layoutX="347.0" layoutY="441.0" prefHeight="42.0" prefWidth="100.0" text="Quantidade:">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Button fx:id="adicionar" layoutX="561.0" layoutY="441.0" mnemonicParsing="false" onAction="#onAdicionarAoCarrinhoClick" prefHeight="42.0" prefWidth="108.0" text="Adicionar" />
+      <Label fx:id="total" layoutX="713.0" layoutY="444.0" prefHeight="37.0" prefWidth="138.0" text="Total:" textFill="#404040">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="42.0" fitWidth="47.0" layoutX="933.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../icons/shopping_16033613.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="42.0" fitWidth="47.0" layoutX="630.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../icons/shopping_16033780.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
