--- a/src/resources/org/cadastroCliente/cadastroCliente-view.fxml
+++ b/src/resources/org/cadastroCliente/cadastroCliente-view.fxml
@@ -17,8 +17,8 @@
             <Image url="@../../LoginCliente.png" />
          </image>
       </ImageView>
-      <Rectangle fx:id="retangulo" arcHeight="30" arcWidth="30" fill="#4c3b28" height="409.0" layoutX="431.0" layoutY="240.0" strokeType="INSIDE" width="419.0" />
-      <VBox alignment="CENTER_LEFT" layoutX="468.0" layoutY="332.0" prefHeight="244.0" prefWidth="100.0">
+      <Rectangle fx:id="retangulo" arcHeight="30" arcWidth="30" fill="#4c3b28" height="409.0" layoutX="773.0" layoutY="156.0" strokeType="INSIDE" width="419.0" />
+      <VBox alignment="CENTER_LEFT" layoutX="810.0" layoutY="248.0" prefHeight="244.0" prefWidth="100.0">
          <children>
             <Label prefHeight="40.0" prefWidth="57.0" text="CPF" textFill="WHITE">
                <font>
@@ -47,7 +47,7 @@
             </Label>
          </children>
       </VBox>
-      <VBox alignment="CENTER" layoutX="552.0" layoutY="332.0" prefHeight="244.0" prefWidth="261.0" spacing="15">
+      <VBox alignment="CENTER" layoutX="894.0" layoutY="248.0" prefHeight="244.0" prefWidth="261.0" spacing="15">
          <children>
             <TextField fx:id="cpf" />
             <TextField fx:id="nome" />
@@ -56,12 +56,12 @@
             <TextField fx:id="telefone" />
          </children>
       </VBox>
-      <ImageView fitHeight="73.0" fitWidth="73.0" layoutX="604.0" layoutY="265.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="73.0" fitWidth="73.0" layoutX="946.0" layoutY="181.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../icons/novoCliente.png" />
          </image>
       </ImageView>
-      <Button fx:id="cancelar" layoutX="493.0" layoutY="576.0" mnemonicParsing="false" onAction="#cancelar" prefHeight="50.0" prefWidth="120.0" text="Cancelar" />
-      <Button fx:id="cadastrar" onAction="#cadastrar" layoutX="669.0" layoutY="576.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="120.0" text="Cadastrar" />
+      <Button fx:id="cancelar" layoutX="835.0" layoutY="492.0" mnemonicParsing="false" onAction="#cancelar" prefHeight="50.0" prefWidth="120.0" text="Cancelar" />
+      <Button fx:id="cadastrar" layoutX="1011.0" layoutY="492.0" mnemonicParsing="false" onAction="#cadastrar" prefHeight="50.0" prefWidth="120.0" text="Cadastrar" />
    </children>
 </AnchorPane>
